--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,12 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.xbib.elasticsearch.plugin</groupId>
+            <artifactId>elasticsearch-river-jdbc</artifactId>
+            <version>1.5.0.0</version>
+        </dependency>
+
     </dependencies>
 
     <build>
@@ -76,11 +82,11 @@
                             <goal>copy-resources</goal>
                         </goals>
                         <configuration>
-                            <outputDirectory>${basedir}/target/elasticsearch/plugins/riverstatus/_site
+                            <outputDirectory>${basedir}/target/elasticsearch/plugins/feederstatus/_site
                             </outputDirectory>
                             <resources>
                                 <resource>
-                                    <directory>${basedir}/src/main/resources/elasticsearch-riverstatus/dist</directory>
+                                    <directory>${basedir}/src/main/resources/elasticsearch-feederstatus/dist</directory>
                                     <filtering>false</filtering>
                                 </resource>
                             </resources>
