--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,7 @@
             <groupId>org.xbib.elasticsearch.plugin</groupId>
             <artifactId>elasticsearch-river-jdbc</artifactId>
             <version>1.5.0.0</version>
+            <scope>provided</scope>
         </dependency>
 
     </dependencies>
