Fix package configuration. Now build a working ZIP file that can be installed.to Elasticsearch

--- a/src/main/assemblies/plugin.xml
+++ b/src/main/assemblies/plugin.xml
@@ -17,8 +17,8 @@
     </dependencySets>
     <fileSets>
         <fileSet>
-            <directory>${basedir}/src/main/resources/elasticsearch-riverstatus/dist</directory>
-            <outputDirectory>/_site</outputDirectory>
+            <directory>${basedir}/target/dist/</directory>
+            <outputDirectory>/</outputDirectory>
             <includes>
                 <include>**/*.*</include>
             </includes>
